--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -155,3 +155,80 @@
 }
 
 //MEDIA QUERIES ****************>
+@media screen and (min-width: 500px) {
+  .home{
+    .homeContent{
+        .textDiv{
+            .smallText{
+                font-size: 16px;
+            }
+
+            .homeTitle{
+                position: relative;
+                font-size: 1.9rem;
+                width: max-content;
+
+                &::after{
+                    position: absolute;
+                    content: '';
+                    //background: var(--SecondaryColor);
+                    height: 5px;
+                    width: 145px;
+                    right: 8px;
+                    bottom: 5px;
+                    z-index: -1;
+                }
+            }
+        }
+
+        .cardDiv{
+            grid-template-columns: repeat(2,1fr);
+        }
+    }
+  }
+}
+
+@media screen and (min-width: 660px) {
+.home{
+    .homeContent{
+        .cardDiv{
+            padding: 2rem 1rem;
+            grid-template-columns: repeat(3,1fr);
+        }
+    }
+}
+}
+
+@media screen and (min-width: 940px) {
+    .home{
+       height: 70vh; 
+    }
+    }
+
+    @media screen and (min-width: 1240px) {
+        .home{
+           height: 80vh; 
+
+           .homeContent{
+            padding-left: 0;
+            padding-right: 0;
+
+            .cardDiv{
+                padding: 2rem 1rem;
+                grid-template-columns: repeat(3,1fr);
+                .input{
+                    margin-bottom: 1.5rem;
+                }
+
+                .searchOptions{
+                    bottom: -1rem;
+                    padding: 8px 1rem;
+
+                    span{
+                        font-size: 17px;  
+                    }
+                }
+            }
+           }
+        }
+        }
