--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
    --cardBG: rgb(225, 225, 225);
 }
 
+
 html{
 scroll-behavior: smooth;
 }
@@ -91,7 +92,26 @@ input{
 }
 
 body{
- background: var(--bodyColor);
+ background: var(--greyText);
 }
 
 /* default styling to apply to all sections */
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 1240px) {
+    .container{
+        width: 80% !important;
+        margin: auto !important;
+    }
+
+    .section{
+        padding: 6rem 0 4rem;
+    }
+}
+
+@media screen and (min-width: 2560px) {
+   body{
+    zoom: 1.7;
+   }
+}
+
