--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -17,9 +17,9 @@ position: fixed;
 display: flex;
 align-items: center;
 justify-content: space-between;
-background: rgb(45, 151, 35);
+background: rgb(184, 99, 21);
 width: 100%;
-padding: 0.9rem;
+padding: 0.5rem;
 z-index: 1000;
 box-shadow: 0 2px 4px rgba(9, 53, 66, 0.904);
 
@@ -41,7 +41,7 @@ box-shadow: 0 2px 4px rgba(9, 53, 66, 0.904);
 @media screen and (max-width: 768px) {
     .navBar{
         position: absolute;
-        background: var(--bodyColor);
+        background: rgb(184, 99, 21);
         height: max-content;
         width: 70%;
         border-radius: 1rem;
@@ -66,7 +66,7 @@ box-shadow: 0 2px 4px rgba(9, 53, 66, 0.904);
 
 
             .navLink{
-                color: var(--textColor);
+                color: var(--blackColor);
                 font-size: 1.2rem;
                 font-weight: 600;
                 &:hover{
