--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -70,7 +70,15 @@
       }
 
     }
-
+     .homeParagraph{
+        h2{
+            text-align: left;
+            margin-top: 0.1rem 0;
+        }
+        text-align: right;
+        font-size: 17px;
+        margin-top: 0.1rem 0;
+     }
 
      .cardDiv{
         position: relative;
