--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -144,6 +144,36 @@
 
     }
 
+
+    .modal{
+       position: fixed;
+       z-index: 1;
+       align-items: center;
+       width: 650px;
+       background: white;
+       top: 37%;
+       left: 43%;
+       transform: translate(-40%, -40%);
+       box-shadow: rgb(75, 74, 74) 0px 5px 15px;
+       border: 1.5px solid;
+       padding: 30px 30px;
+       border-radius: 7px;
+       width: 80%;
+       max-width: 600px;
+       margin: 0 auto;
+       z-index: 1000;
+    }
+
+    .modal .modal_content{
+        max-width: 100%;
+        max-height: 80vh; 
+        overflow-y: auto;
+    }
+
+
+
+
+
 }
 
 //MEDIA QUERIES**************>
