--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -151,12 +151,12 @@
        align-items: center;
        width: 650px;
        background: white;
-       top: 37%;
+       top: 39%;
        left: 43%;
        transform: translate(-40%, -40%);
        box-shadow: rgb(75, 74, 74) 0px 5px 15px;
        border: 1.5px solid;
-       padding: 30px 30px;
+       padding: 20px 30px;
        border-radius: 7px;
        width: 80%;
        max-width: 600px;
@@ -169,6 +169,24 @@
         max-height: 80vh; 
         overflow-y: auto;
     }
+
+    .modal .modal_content .close{
+         cursor: pointer;
+         border: none;
+    }
+
+    .modal .modal_content h2{
+        color: rgb(100, 131, 17);
+        text-transform: capitalize;
+        font-weight: 700;
+    }
+
+    .modal .modal_content h3{ 
+        padding-bottom: 0.5px;
+        margin-bottom: 2px; 
+        font-weight: 900;
+    }
+    
 
 
 
