--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -73,6 +73,7 @@
      .homeParagraph{
         h2{
             text-align: left;
+            color: white;
             margin-top: 0.1rem 0;
         }
         text-align: right;
